# gdlauncherflutterized

./: README.md  analyze.json  analyze.txt  analyze3.txt  analyze4.txt  analyze7.txt  analyze8.txt  analyze_utf8.json  build.txt  errors.txt  pubspec.yaml  state_of_the_app.md
.agents/workflows/: antigravity_workflow.md  cosmic-launcher-project-manifesto-context.md  system_context.md  universal-workflow-cosmic-launcher.md
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/providers/: archive_provider.dart  dashboard_provider.dart  importer_provider.dart  installation_provider.dart  log_provider.dart  navigation_provider.dart  settings_provider.dart  settings_state_provider.dart  vanilla_version_provider.dart
lib/theme/: colors.dart
lib/views/: browse_view.dart  dashboard_view.dart  launcher_layout.dart  library_view.dart  log_reader_view.dart  settings_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: archive_parser.rs  downloader.rs  importer.rs  importer_pipeline.rs  mod.rs  settings_manager.rs  vanilla_manager.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_gdlauncherflutterized.podspec
rust_builder/linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+41 files in other folders)
